--- a/config.env
+++ b/config.env
@@ -1,16 +1,14 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "1903924051:AAFPp6FsrKO8pl0DqVhKb7uIfgggln3u7o0"
+GDRIVE_FOLDER_ID = "1y0l8vZtR7QCPUOByperbvf5WDE4zVP-0"
+OWNER_ID = "923830220"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = "7734263"
+TELEGRAM_HASH = "2b7ad20784a3d82c5284561214203cfc"
 # OPTIONAL CONFIG
-IS_TEAM_DRIVE = ""
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""
 SUDO_USERS = ""
@@ -22,26 +20,26 @@ STOP_DUPLICATE = ""
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
-EXTENSION_FILTER = ""
+EXTENTION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/myooaung/anasheroku"
+UPSTREAM_BRANCH = "master"
 # Leech
-USER_SESSION_STRING = ""
-LEECH_SPLIT_SIZE = ""
+TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
-# qBittorrent/Aria2c
+# qBittorrent
 BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
 WEB_PINCODE = ""
+QB_SEED = ""
 # RSS
 RSS_DELAY = ""
 RSS_COMMAND = ""
 RSS_CHAT_ID = ""
-RSS_USER_SESSION_STRING = ""
+USER_SESSION_STRING = ""
 # Private Files
 ACCOUNTS_ZIP_URL = ""
 TOKEN_PICKLE_URL = ""
@@ -49,9 +47,14 @@ MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
 # Mega
-MEGA_API_KEY = ""
+MEGA_API_KEY = "CGohQJYT"
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
+# Shortener
+SHORTENER = ""
+SHORTENER_API = ""
+# GDTOT COOKIE
+CRYPT = ""
 # Buttons
 VIEW_LINK = ""
 # Torrent Search
