--- a/config.env
+++ b/config.env
@@ -23,8 +23,8 @@ TORRENT_TIMEOUT = ""
 EXTENTION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 # Update
-UPSTREAM_REPO = "https://github.com/myooaung/anasheroku"
-UPSTREAM_BRANCH = "master"
+UPSTREAM_REPO = ""
+UPSTREAM_BRANCH = ""
 # Leech
 TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
